@@ -1,5 +1,6 @@
 DATE        AUTHOR      CHANGE
 ---------- -----------  -------------------------------------------------------
+2006-07-11 allenb       Expose OptionRepository and cppdom methods in dll.
 2006-07-05 allenb       More refactoring of build system.
                         It is not possible to specify all variants to build
                         and build them simultaneously.
